--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,10 @@ const projects = (await getCollection("projects"))
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
   .slice(0,SITE.NUM_PROJECTS_ON_HOMEPAGE);
 
+  const businesses = (await getCollection("businesses"))
+  
+  .slice(0,SITE.NUM_BUSINESSES_ON_HOMEPAGE);
+
 // const allwork = (await getCollection("work"))
 //   .sort((a, b) => new Date(b.data.dateStart).valueOf() - new Date(a.data.dateStart).valueOf())
 //   .slice(0,SITE.NUM_WORKS_ON_HOMEPAGE);
@@ -25,7 +29,8 @@ const projects = (await getCollection("projects"))
 //   allwork.map(async (item) => {
 //     const { Content } = await item.render();
 //     return { ...item, Content };
-//   })
+//   }) 
+// );
 
 
 ---
@@ -64,6 +69,9 @@ const projects = (await getCollection("projects"))
           ))}
         </ul>
       </section>
+
+      
+
 
       <!-- <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
@@ -111,6 +119,26 @@ const projects = (await getCollection("projects"))
           ))}
         </ul>
       </section>
+
+
+
+      <section class="animate space-y-6">
+        <div class="flex flex-wrap gap-y-2 items-center justify-between">
+          <h5 class="font-semibold text-black dark:text-white">
+            My Businesses
+          </h5>
+          <Link href="/businesses">
+            See all my businesses
+          </Link>
+        </div>
+        <ul class="flex flex-col gap-4">
+          {businesses.map(entry => (
+            <li>
+              <ArrowCard entry={entry} />
+            </li>
+          ))}
+        </ul>
+      </section> 
 
       <section class="animate space-y-4">
         <h5 class="font-semibold text-black dark:text-white">
