--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,20 +13,20 @@ import { SITE } from "@consts";
         </div>
       </Link>
       <nav class="flex gap-1">
-        <Link href="/blog">
+        <Link href="/thoughts">
           blog
-        </Link>
-        <span>
-          {`/`}
-        </span>
-        <Link href="/work">
-          work
         </Link>
         <span>
           {`/`}
         </span>
         <Link href="/projects">
           projects
+        </Link>
+        <span>
+          {`/`}
+        </span>
+        <Link href="/businesses">
+          businesses
         </Link>
       </nav>
     </div>
