--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,10 +55,10 @@ const projects = (await getCollection("projects"))
       <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
-            Latest posts
+            Latest Ronny Thoughts
           </h5>
           <Link href="/blog">
-            See all posts
+            See all Ronny Thoughts
           </Link>
         </div>
         <ul class="flex flex-col gap-4">
