--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,8 +13,8 @@ import { SITE } from "@consts";
         </div>
       </Link>
       <nav class="flex gap-1">
-        <Link href="/thoughts">
-          blog
+        <Link href="/blog">
+          thoughts
         </Link>
         <span>
           {`/`}
